--- a/bzl/docs/build_protocols.adoc
+++ b/bzl/docs/build_protocols.adoc
@@ -2,6 +2,15 @@
 :toc: auto
 :toclevels: 3
 
+
+== Overview
+
+=== Build Protocols
+
+=== Build Stacks
+
+
+
 == The Standard Protocol
 
 Package:  `//bin`
